styling pages,remove customer fields,add staff signup,logout

--- a/templates/customer.html
+++ b/templates/customer.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>View</title>
     <style>
@@ -20,18 +21,68 @@
 </head>
 {% include 'navbar.html' %}
 <body>
-
-<div class="container-fluid">
-    <div class="row justify-content-center align-items-center card-container">
-        <div class="card border-light mb-3 card-wrapper">
-            <div class="card-header">Name:{{ customer.name }}</div>
-            <div class="card-body">
-                <h5 class="card-title">Phone Number : {{ customer.phone }}</h5>
-                <p class="card-text">Last Payment : {{ customer.last_payment }}</p>
-                  <p class="card-text">Status : {% if customer.subscription %}Active{% else %}Inactive{% endif %}</p>
+{% include 'alerts.html'%}
+<section class="vh-100" style="background-color: #f4f5f7;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-lg-6 mb-4 mb-lg-0">
+        <div class="card mb-3" style="border-radius: .5rem;">
+          <div class="row g-0">
+            <div class="col-md-4 text-center text-black" style="padding-top: 40px">
+         
+            
+              <h5>{{ customer.name }}</h5>
+            
+              <i class="far fa-edit mb-5"></i>
             </div>
+            <div class="col-md-8">
+              <div class="card-body p-4">
+                <h6>Information</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6>Email</h6>
+                    <p class="text-muted">{{ customer.email }}</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Phone</h6>
+                    <p class="text-muted">{{ customer.phone }}</p>
+                  </div>
+                </div>
+                <h6>Subscription</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6>Status</h6>
+                    <p class="text-muted">{% if customer.subscription %}Active{% else %}Inactive{% endif %}</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Last Payment</h6>
+                    <p class="text-muted">{{ customer.last_payment | timesince }}</p>
+                  </div>
+                </div>
+                   <div class="col-6 mb-3">
+                    <h6>Router ip</h6>
+                    <p class="text-muted">{{ customer.router_ip_address}}</p>
+                  </div>
+              <div class="col-6 mb-3">
+                    <h6>MB/S</h6>
+                    <p class="text-muted">{{ customer.bandwith}}</p>
+                  </div>
+                 
+                <div class="d-flex justify-content-start">
+                  <a href="{% url 'update_customer' customer.id %}"  class="btn btn-primary" >Update</a>
+                        {% if request.user.is_superuser %}
+                     <a href="{% url 'delete_customer' customer.id %}" class="btn btn-danger"  style="margin-left: 10px" >Delete</a>
+                    {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
+</section>
 </body>
 </html>
