--- a/templates/home.html
+++ b/templates/home.html
@@ -2,24 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Phenom</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 {% include 'navbar.html' %}
-
-<div class="container marketing">
+{% include 'alerts.html' %}
+<div class="container marketing" style="padding-top: 10px">
     <!-- Three columns of text below the carousel -->
-    <div class="row" style="margin-top: 10px">
-        {% for customer in customers %}
-            <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-                <h2 class="fw-normal">{{ customer.name }}</h2>
-                <p>{% if customer.subscription %}Active{% else %}Inactive{% endif %}</p>
-                <p><a class="btn btn-secondary" href="{% url 'view_customer' customer.id %}">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-        {% endfor %}
-    </div><!-- /.row -->
+<div class="list-group list-group-light">
+    {% for customer in customers %}
+  <a href="{% url 'view_customer' customer.id %}" class="list-group-item list-group-item-action px-3 border-0 rounded-3 mb-2 list-group-item-secondary">
+   {{ customer.name }}</a>
+{% endfor %}
+</div>
 </div>
 </body>
 </html>
