--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Customer Signup</title>
+    <title>PHENOM </title>
 </head>
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
 <main class="form-signin w-50 m-auto">
   <form method="post">
    
-    <h1 class="h3 mb-3 fw-normal">Customer Signup</h1>
+    <h1 class="h3 mb-3 fw-normal">PHENOM</h1>
         {% csrf_token %}
+      {% include 'alerts.html' %}
       {{ form | crispy }}
-    <button class="btn btn-primary w-40 py-2" type="submit">Create</button>
+    <button class="btn btn-primary w-40 py-2" type="submit">Submit</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2024</p>
   </form>
 </main>
