--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Phenom</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
 {% include 'navbar.html' %}
 {% include 'alerts.html' %}
-<div class="container marketing" style="padding-top: 10px">
-    <!-- Three columns of text below the carousel -->
-<div class="list-group list-group-light">
-    {% for customer in customers %}
-  <a href="{% url 'view_customer' customer.id %}" class="list-group-item list-group-item-action px-3 border-0 rounded-3 mb-2 list-group-item-secondary">
-   {{ customer.name }}</a>
-{% endfor %}
-</div>
-</div>
+<section class="section">
+    <div class="container">
+        <div class="columns is-multiline">
+            {% for customer in customers %}
+            <div class="column is-one-third">
+                <a href="{% url 'view_customer' customer.id %}" class="box has-background-light">
+                    <p class="title is-5">{{ customer.name }}</p>
+                </a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 </body>
 </html>
