--- a/templates/login.html
+++ b/templates/login.html
@@ -1,59 +1,41 @@
 {% load crispy_forms_filters %}
-<!-- signup.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        .asteriskField{
-            display: none;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
-</head>
-<body>
-<section class="vh-100" style="background-color: #9A616D;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
-          <div class="row g-0">
-            <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-            </div>
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
-
-                <form method="post">
-                    {% csrf_token %}
-                    {% include 'alerts.html' %}
-                  <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">PHENOM</span>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <style>
+      body {
+        background-color: #f5f5f5;
+      }
+    </style>
+  </head>
+  <body>
+    <section class="section">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-half">
+            <div class="box">
+                {% include 'alerts.html' %}
+              <h1 class="title has-text-centered">Login</h1>
+              <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <div class="field">
+                  <div class="control">
+                    <button class="button is-primary is-fullwidth">Login</button>
                   </div>
-
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign in to your account</h5>
-
-                  <div data-mdb-input-init class="form-outline mb-4">
-                   {{ form | crispy }}
-                  </div>
-                  <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-                  </div>
-
-                  <a class="small text-muted" href="#!">Forgot password?</a>
-                    
-                </form>
-
-              </div>
+                </div>
+                <div class="has-text-centered">
+                  <a href="#">Forgot Password?</a>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-</body>
+    </section>
+  </body>
 </html>
