--- a/templates/payment.html
+++ b/templates/payment.html
@@ -3,29 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Payment</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-     <div class="container">
-           {% include 'alerts.html' %}
-         <div class="row justify-content-center">
-             <div class="col-sm-4">
-                 <form action="{% url 'initiate_payment' customer.id %}" method="post" class="mt-5 shadow px-3 py-4">
-                     {%  csrf_token %}
-                     <div class="mb-2">
-                         <label for="phone" class="form-label">Phone</label>
-                         <input type="tel" value="{{ customer.phone }}" class="form-control rounded-0" name="phone" required>
-                     </div>
+    <section class="section">
+        <div class="container">
+            {% include 'alerts.html' %}
+            <div class="columns is-centered">
+                <div class="column is-one-third">
+                    <form action="{% url 'initiate_payment' customer.id %}" method="post" class="box">
+                        {% csrf_token %}
+                        <div class="field">
+                            <label class="label">Phone</label>
+                            <div class="control">
+                                <input class="input" type="tel" value="{{ customer.phone }}" name="phone" required>
+                            </div>
+                        </div>
 
-                      <div class="mb-2">
-                         <label for="amount" class="form-label">Amount</label>
-                         <input type="number" value="{{ customer.subscription_amount }}" class="form-control rounded-0" name="amount" readonly>
-                     </div>
+                        <div class="field">
+                            <label class="label">Amount</label>
+                            <div class="control">
+                                <input class="input" type="number" value="{{ customer.subscription_amount }}" name="amount" readonly>
+                            </div>
+                        </div>
 
-                     <button class="btn btn-dark w-100 rounded-0">Pay</button>
-                 </form>
-             </div>
-         </div>
-     </div>
+                        <div class="field">
+                            <div class="control">
+                                <button class="button is-dark is-fullwidth">Pay</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
