--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,23 +1,35 @@
 {% load crispy_forms_filters %}
-<!-- signup.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>PHENOM </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <title>PHENOM</title>
 </head>
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-<main class="form-signin w-50 m-auto">
-  <form method="post">
-   
-    <h1 class="h3 mb-3 fw-normal">PHENOM</h1>
-        {% csrf_token %}
-      {% include 'alerts.html' %}
-      {{ form | crispy }}
-    <button class="btn btn-primary w-40 py-2" type="submit">Submit</button>
-    <p class="mt-5 mb-3 text-body-secondary">&copy; 2024</p>
-  </form>
-</main>
+<body>
+<section class="section">
+    <div class="container">
+        <div class="columns is-centered">
+            <div class="column is-half">
+                <div class="box">
+                    <h1 class="title has-text-centered">PHENOM</h1>
+                    <form method="post">
+                        {% csrf_token %}
+                        {% include 'alerts.html' %}
+                        {{ form|crispy }}
+                        <div class="field">
+                            <div class="control">
+                                <button class="button is-primary is-fullwidth" type="submit">Submit</button>
+                            </div>
+                        </div>
+                        <p class="has-text-centered mt-5">
+                            &copy; 2024
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
