--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                   </div>
                 </div>
                 <div class="has-text-centered">
-                  <a href="#">Forgot Password?</a>
+                  <a href="{% url 'password_reset' %}">Forgot Password?</a>
                 </div>
               </form>
             </div>
