--- a/templates/password_reset_form.html
+++ b/templates/password_reset_form.html
@@ -1,8 +1,28 @@
-{% block content %}
-<h2>Password reset</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset my password</button>
-</form>
-{% endblock %}
+<!-- registration/password_reset_form.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Reset</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+</head>
+<body>
+    <section class="section">
+        <div class="container">
+            <div class="columns is-centered">
+                <div class="column is-half">
+                    <h1 class="title">Password Reset</h1>
+                    <h2>Enter your email to reset your password</h2>
+                    <form method="post" class="box">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="button is-primary" style="padding: 10px;margin-top: 10px">Reset Password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
