--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <link rel="icon" href="https://cdn.pixabay.com/photo/2016/12/27/13/10/logo-1933884_640.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
