--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Phenom</title>
+    <link rel="icon" href="https://cdn.pixabay.com/photo/2016/12/27/13/10/logo-1933884_640.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
         <div class="columns is-multiline">
             {% for customer in customers %}
             <div class="column is-one-third">
-                <a href="{% url 'view_customer' customer.id %}" class="box has-background-light">
+                <a href="{% url 'view_customer' customer.id %}" style="text-decoration: none" class="box has-background-light">
                     <p class="title is-5">{{ customer.name }}</p>
                 </a>
             </div>
