--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset Complete</title>
+        <link rel="icon" href="https://cdn.pixabay.com/photo/2016/12/27/13/10/logo-1933884_640.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <style>
         /* Custom styles */
