--- a/templates/view_staff.html
+++ b/templates/view_staff.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <link rel="icon" href="https://cdn.pixabay.com/photo/2016/12/27/13/10/logo-1933884_640.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>View</title>
     <style>
@@ -47,12 +48,6 @@
                 <h6>Permissions</h6>
                 <hr class="mt-0 mb-4">
                 <div class="row pt-1">
-                  <div class="col-12 mb-3">
-                    <h6>Allowed Permissions</h6>
-                {% for permission in permissions %}
-                <li>{{ permission }}</li>
-            {% endfor %}
-                  </div>
                 </div>
                 <div class="d-flex justify-content-start">
                   <a href="{% url 'update_staff' staff.id %}" class="btn btn-primary">Update</a>
