--- a/templates/404.html
+++ b/templates/404.html
@@ -15,7 +15,7 @@
                 <p class="lead">
                     The page ({{ request.path }}) you’re looking for doesn’t exist.
                   </p>
-                <a href="{% url '' %}" class="btn btn-primary">Go Home</a>
+                <a href="{% url 'home' %}" class="btn btn-primary">Go Home</a>
             </div>
         </div>
 </body>
